chore: Revert java migration in master